feat: create monthly income chart

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@types/qrcode": "^1.5.5",
+    "apexcharts": "^5.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
@@ -24,6 +25,7 @@
     "next": "15.4.6",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
