--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@types/qrcode": "^1.5.5",
     "apexcharts": "^5.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
-    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-qr-code": "^2.0.18",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
